# sift-kg

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.agents/skills/sift-kg/: SKILL.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  pages.yml
docs/: 基于sift-kg构建知识图谱-01架构借鉴.md  基于sift-kg构建知识图谱-02模块级建议.md  基于sift-kg构建知识图谱-03工程实践建议.md  设计文档-01概述与配置.md  设计文档-03抽取与域配置.md  设计文档-04知识图谱与实体消歧.md  设计文档-05其他模块.md  设计文档-06核心设计.md  设计文档.md
examples/epstein/: README.md  domain.yaml  sift.yaml
examples/epstein/output/: communities.json  entity_descriptions.json  graph.html
examples/ftx/: README.md
examples/ftx/docs/: alameda_research.txt  binance.txt  caroline_ellison.txt  changpeng_zhao.txt  collapse_of_ftx.txt  ftx_company.txt  john_ray_iii.txt  ryan_salame.txt  sam_bankman_fried.txt
examples/ftx/output/: communities.json  entity_descriptions.json  graph.html  graph_data.json  merge_proposals.yaml  narrative.md
examples/ontoverse_az/: OntoverseSandbox.rdf  README.md  auto_confirm.py  collections.json  demo_subset.yaml  download_pdfs.sh  manifest.csv  manifest.json  parse_rdf.py  run_pipeline.sh
examples/ontoverse_az/output/: communities.json  entity_descriptions.json  graph.html  narrative.md  topology_snapshot.json
examples/transformers/: README.md  sift.yaml
examples/transformers/output/: communities.json  entity_descriptions.json  graph.html  narrative.md
pages/: index.html
src/sift_kg/: __init__.py  __main__.py  cli.py  config.py  export.py  pipeline.py  visualize.py
src/sift_kg/domains/: __init__.py  discovery.py  loader.py  models.py
src/sift_kg/extract/: __init__.py  extractor.py  llm_client.py  models.py  prompts.py
src/sift_kg/graph/: __init__.py  builder.py  communities.py  knowledge_graph.py  postprocessor.py  prededup.py
src/sift_kg/ingest/: __init__.py  base.py  chunker.py  kreuzberg_extractor.py  ocr.py  pdfplumber_extractor.py  reader.py
src/sift_kg/narrate/: __init__.py  generator.py  (+1 more)
tests/: conftest.py  test_cli_json.py  test_clustering.py  test_communities.py  test_config.py  test_domains.py  test_export.py  test_extract.py  test_graph.py  test_ingest.py  test_llm_client.py  test_narrate.py  test_prededup.py  test_resolve.py  test_review.py  test_view_filters.py
(+24 files in other folders)
